[package]
name = "tangle"
version = { workspace = true }
authors = { workspace = true }
build = "build.rs"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Tangle chain node"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[[bin]]
name = "tangle"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[dependencies]
clap = { workspace = true }
futures = { workspace = true }
hex-literal = { workspace = true }
parity-scale-codec = { workspace = true }
rand = { workspace = true, features = ["std"] }
serde_json = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }

# Substrate dependencies
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true }
frame-system = { workspace = true }
frame-metadata-hash-extension = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-babe = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-network-sync = { workspace = true }
sc-offchain = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-keyring = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-core = { workspace = true, features = ["std"] }
sp-inherents = { workspace = true, features = ["std"] }
sp-keystore = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
sp-timestamp = { workspace = true, features = ["std"] }
pallet-services-rpc = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-offchain = { workspace = true }
pallet-airdrop-claims = { workspace = true }
sc-chain-spec = { workspace = true }
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }
sp-session = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
sp-io = { workspace = true }

# RPC related dependencies
jsonrpsee = { workspace = true }
pallet-im-online = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
sc-transaction-pool-api = { workspace = true }

# Frontier
fc-api = { workspace = true }
fc-cli = { workspace = true }
fc-consensus = { workspace = true }
fc-db = { workspace = true }
fc-mapping-sync = { workspace = true }
fc-rpc = { workspace = true, features = ["rpc-binary-search-estimate"] }
fc-rpc-core = { workspace = true }
fc-storage = { workspace = true }
fp-dynamic-fee = { workspace = true, features = ["std"] }
fp-evm = { workspace = true, features = ["std"] }
fp-rpc = { workspace = true, features = ["std"] }

primitives-ext = { workspace = true }
rpc-debug = { workspace = true }
rpc-primitives-debug = { workspace = true }
rpc-primitives-txpool = { workspace = true }
rpc-trace = { workspace = true }
rpc-txpool = { workspace = true }
sc-consensus-babe-rpc = { workspace = true }
sc-consensus-grandpa-rpc = { workspace = true }
sc-consensus-slots = { workspace = true }
sc-consensus-manual-seal = { workspace = true }
sp-consensus = { workspace = true }
sp-transaction-storage-proof = { workspace = true }

tangle-crypto-primitives = { workspace = true }
tangle-primitives = { workspace = true, features = ["std"] }
tangle-runtime = { workspace = true, features = ["std"] }
tangle-testnet-runtime = { workspace = true, optional = true }
# sygma-rpc = { workspace = true }
# sygma-runtime-api = { workspace = true }

[features]
default = ["with-rocksdb-weights", "rocksdb", "sql"]
runtime-benchmarks = [
 "frame-benchmarking-cli/runtime-benchmarks",
 "frame-benchmarking/runtime-benchmarks",
 "frame-system/runtime-benchmarks",
 "tangle-runtime/runtime-benchmarks",
 "tangle-testnet-runtime?/runtime-benchmarks",
 "sc-service/runtime-benchmarks",
]
with-rocksdb-weights = ["tangle-testnet-runtime/with-rocksdb-weights"]
with-paritydb-weights = ["tangle-testnet-runtime/with-paritydb-weights"]
rocksdb = [
 "sc-cli/rocksdb",
 "sc-service/rocksdb",
 "fc-cli/rocksdb",
 "fc-db/rocksdb",
 "fc-mapping-sync/rocksdb",
 "fc-rpc/rocksdb",
]
sql = ["fc-db/sql", "fc-mapping-sync/sql"]
testnet = ["tangle-testnet-runtime"]
txpool = ["fc-rpc/txpool"]
fast-runtime = ["tangle-testnet-runtime/fast-runtime", "tangle-runtime/fast-runtime"]
metadata-hash = ["tangle-testnet-runtime?/metadata-hash", "tangle-runtime/metadata-hash"]
manual-seal = []
