[package]
name = "tangle-relayer-gadget"
version = "0.0.1"
authors = ["Webb Developers <dev@webb.tools>", "Shady Khalifa <dev+github@shadykhalifa.me>"]
edition = { workspace = true }
homepage = { workspace = true }
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = { workspace = true }

[dependencies]
ethereum-types = { workspace = true }
tracing = { workspace = true }

# Substrate
sc-keystore = { workspace = true }
sp-application-crypto = { workspace = true }
sp-keystore = { workspace = true }

# Relayer
webb-relayer = { git = "https://github.com/webb-tools/relayer", branch = "develop" }
webb-relayer-config = { git = "https://github.com/webb-tools/relayer", branch = "develop" }
webb-relayer-context = { git = "https://github.com/webb-tools/relayer", branch = "develop" }
webb-relayer-store = { git = "https://github.com/webb-tools/relayer", branch = "develop" }
webb-relayer-types = { git = "https://github.com/webb-tools/relayer", branch = "develop" }
