[package]
name = "tangle-subxt"
version = "0.1.4"
description = "Rust bindings and interface to interact with Tangle Network using subxt"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywards = ["blockchain", "tangle", "subxt"]
categories = ["cryptography", "cryptography::cryptocurrencies"]
exclude = ["./metadata"]
readme = "README.md"

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
subxt = { version = "0.37.0", default-features = false, features = ["jsonrpsee", "native"] }
subxt-signer = { version = "0.37.0", default-features = false, features = ["subxt", "sr25519", "ecdsa", "std"] }
serde = { workspace = true, features = ["derive"] }
