[package]
name = "tangle-subxt"
version = "0.2.0"
description = "Rust bindings and interface to interact with Tangle Network using subxt"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = ["blockchain", "tangle", "subxt"]
categories = ["cryptography", "cryptography::cryptocurrencies"]
exclude = ["./metadata"]
readme = "README.md"

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
subxt = { version = "0.37.0", default-features = false, features = ["jsonrpsee"], optional = true }
subxt-signer = { version = "0.37.0", default-features = false, features = ["subxt", "sr25519", "ecdsa"] }
serde = { workspace = true, features = ["derive"] }
subxt-core = "0.37.0"

[features]
default = ["std", "subxt/native"]
std = [
    "dep:subxt",
    "subxt/jsonrpsee",
    "subxt-signer/std"
]
web = [
    "dep:subxt",
    "subxt/jsonrpsee",
    "subxt/web",
    "subxt-signer/web"
]
