[package]
name = "tangle-subxt"
version = "0.24.0"
description = "Rust bindings and interface to interact with Tangle Network using subxt"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = ["blockchain", "tangle", "subxt"]
categories = ["cryptography", "cryptography::cryptocurrencies"]
exclude = ["./metadata"]
readme = "README.md"

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
subxt = { workspace = true, features = ["jsonrpsee"], optional = true }
subxt-signer = { workspace = true, features = ["subxt", "sr25519", "ecdsa"] }
serde = { workspace = true, features = ["derive"] }
subxt-core = { workspace = true }

[features]
default = ["std"]
std = ["dep:subxt", "subxt/native", "subxt/jsonrpsee", "subxt-core/std", "subxt-signer/std"]
web = ["dep:subxt", "subxt/jsonrpsee", "subxt/web", "subxt-signer/web"]
