[package]
name = "examples-jobs"
version = "0.1.0"
authors = { workspace = true }
edition = "2021"
license = "GPL-3.0-only"
repository = { workspace = true }

[dev-dependencies]
subxt-signer = { version = "0.37.0", default-features = false, features = ["subxt", "sr25519"] }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0"  }
tokio = { version = "1.32.0", features = ["full"] }
tangle-crypto-primitives = { path = "../../primitives/crypto"}
tangle-subxt = { path = "../../tangle-subxt" }
hex = {workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
subxt = { version = "0.37.0" }
serde_json = { workspace = true }
ethers = "2.0.13"
