[package]
name = "frost-ed448"
edition = "2021"
# When releasing to crates.io:
# - Update html_root_url
# - Update CHANGELOG.md
# - Create git tag.
version.workspace = true
authors = [
    "Deirdre Connolly <durumcrustulum@gmail.com>",
    "Chelsea Komlo <me@chelseakomlo.com>",
    "Conrado Gouvea <conradoplg@gmail.com>"
]
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "ed25519", "threshold", "signature"]
description = "A Schnorr signature scheme over Ed25519 that supports FROST."

[package.metadata.docs.rs]
features = ["serde"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
parity-scale-codec = { workspace = true }
ed448-goldilocks = { git = "https://github.com/tangle-network/Ed448-Goldilocks", package = "ed448-goldilocks-plus", default-features = false, features = ["zeroize"] }
sp-std = { workspace = true }
tg-frost-core = { workspace = true, features = ["internals"] }
rand_core = { workspace = true }
sha3 = { version = "0.10", default-features = false }
subtle = { workspace = true }

[features]
default = ["std"]
std = [
    "sp-std/std",
    "rand_core/std",
    "parity-scale-codec/std",
    "sha3/std",
    "tg-frost-core/std",
    "ed448-goldilocks/std"
]
