[package]
name = "pallet-ecdsa-claims"
version = "0.1.4"
authors = ["Webb Technologies Inc."]
edition = "2021"
homepage = "https://substrate.dev"
license = "Unlicense"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "max-encoded-len"] }
rustc-hex = { version = "2.1.0", optional = true, default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", default-features = false, optional = true, features = ["derive"] }
serde_derive = { version = "1.0.117", optional = true, default-features = false }
getrandom = { version = "0.2.8", features = ["js"] }

frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
libsecp256k1 = { version = "0.7.0", default-features = false }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
pallet-vesting = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }

[dev-dependencies]
hex-literal = "0.3.4"
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }

serde_json = "1.0.81"

[features]
default = ["std"]
std = [
  "serde",
  "rustc-hex/std",
  "serde_derive",
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-io/std",
  "libsecp256k1/std",
  "pallet-vesting/std",
  "pallet-balances/std",
]
try-runtime = ["frame-support/try-runtime"]
