[package]
name = "pallet-ecdsa-claims"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }

rustc-hex = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
libsecp256k1 = { workspace = true }
pallet-balances = { workspace = true }
pallet-vesting = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

serde_json = { workspace = true }

[features]
default = ["std"]
std = [
 "serde",
 "rustc-hex/std",
 "parity-scale-codec/std",
 "scale-info/std",
 "frame-support/std",
 "frame-system/std",
 "sp-runtime/std",
 "sp-std/std",
 "sp-io/std",
 "libsecp256k1/std",
 "pallet-vesting/std",
 "pallet-balances/std",
]
try-runtime = ["frame-support/try-runtime"]
